// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InventoryHeader visual states > renders apiwarn dark 1`] = `
<DocumentFragment>
  <div
    class="dark"
  >
    <header
      class="border-b backdrop-blur supports-[backdrop-filter]:bg-background/60 sticky top-0 z-40 topbar border-[hsl(var(--tb-border))] bg-[hsl(var(--tb-bg-apiwarn)/0.15)] text-[hsl(var(--tb-fg-default))] dark:bg-[hsl(var(--tb-bg-apiwarn)/0.2)] dark:text-[hsl(var(--tb-fg-contrast))]"
    >
      <div
        class="flex w-full items-center justify-between px-4"
      >
        <div
          class="flex items-center gap-4"
        >
          <div />
        </div>
        <div
          class="flex items-center gap-3"
        >
          <div />
        </div>
      </div>
    </header>
  </div>
</DocumentFragment>
`;

exports[`InventoryHeader visual states > renders apiwarn light 1`] = `
<DocumentFragment>
  <div>
    <header
      class="border-b backdrop-blur supports-[backdrop-filter]:bg-background/60 sticky top-0 z-40 topbar border-[hsl(var(--tb-border))] bg-[hsl(var(--tb-bg-apiwarn)/0.15)] text-[hsl(var(--tb-fg-default))] dark:bg-[hsl(var(--tb-bg-apiwarn)/0.2)] dark:text-[hsl(var(--tb-fg-contrast))]"
    >
      <div
        class="flex w-full items-center justify-between px-4"
      >
        <div
          class="flex items-center gap-4"
        >
          <div />
        </div>
        <div
          class="flex items-center gap-3"
        >
          <div />
        </div>
      </div>
    </header>
  </div>
</DocumentFragment>
`;

exports[`InventoryHeader visual states > renders default dark 1`] = `
<DocumentFragment>
  <div
    class="dark"
  >
    <header
      class="border-b backdrop-blur supports-[backdrop-filter]:bg-background/60 sticky top-0 z-40 topbar border-[hsl(var(--tb-border))] bg-[hsl(var(--tb-bg-default)/0.95)] text-[hsl(var(--tb-fg-default))]"
    >
      <div
        class="flex w-full items-center justify-between px-4"
      >
        <div
          class="flex items-center gap-4"
        >
          <div />
        </div>
        <div
          class="flex items-center gap-3"
        >
          <div />
        </div>
      </div>
    </header>
  </div>
</DocumentFragment>
`;

exports[`InventoryHeader visual states > renders default light 1`] = `
<DocumentFragment>
  <div>
    <header
      class="border-b backdrop-blur supports-[backdrop-filter]:bg-background/60 sticky top-0 z-40 topbar border-[hsl(var(--tb-border))] bg-[hsl(var(--tb-bg-default)/0.95)] text-[hsl(var(--tb-fg-default))]"
    >
      <div
        class="flex w-full items-center justify-between px-4"
      >
        <div
          class="flex items-center gap-4"
        >
          <div />
        </div>
        <div
          class="flex items-center gap-3"
        >
          <div />
        </div>
      </div>
    </header>
  </div>
</DocumentFragment>
`;

exports[`InventoryHeader visual states > renders testing dark 1`] = `
<DocumentFragment>
  <div
    class="dark"
  >
    <header
      class="border-b backdrop-blur supports-[backdrop-filter]:bg-background/60 sticky top-0 z-40 topbar border-[hsl(var(--tb-border))] bg-[hsl(var(--tb-bg-testing)/0.15)] text-[hsl(var(--tb-fg-default))] dark:bg-[hsl(var(--tb-bg-testing)/0.2)] dark:text-[hsl(var(--tb-fg-contrast))]"
    >
      <div
        class="flex w-full items-center justify-between px-4"
      >
        <div
          class="flex items-center gap-4"
        >
          <div />
        </div>
        <div
          class="flex items-center gap-3"
        >
          <div />
        </div>
      </div>
    </header>
  </div>
</DocumentFragment>
`;

exports[`InventoryHeader visual states > renders testing light 1`] = `
<DocumentFragment>
  <div>
    <header
      class="border-b backdrop-blur supports-[backdrop-filter]:bg-background/60 sticky top-0 z-40 topbar border-[hsl(var(--tb-border))] bg-[hsl(var(--tb-bg-testing)/0.15)] text-[hsl(var(--tb-fg-default))] dark:bg-[hsl(var(--tb-bg-testing)/0.2)] dark:text-[hsl(var(--tb-fg-contrast))]"
    >
      <div
        class="flex w-full items-center justify-between px-4"
      >
        <div
          class="flex items-center gap-4"
        >
          <div />
        </div>
        <div
          class="flex items-center gap-3"
        >
          <div />
        </div>
      </div>
    </header>
  </div>
</DocumentFragment>
`;
